k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: karvaan-music
  namespace: karvaan-music
spec:
  type: ClusterIP
  selector:
    app: karvaan-music
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
