k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karvaan-music
  namespace: karvaan-music
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - karvaan.music
      secretName: karvaan-music-tls
  rules:
    - host: karvaan.music
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karvaan-music
                port:
                  number: 80
